--- a/css/index.css
+++ b/css/index.css
@@ -46,7 +46,7 @@ body {
   z-index: 1;
   width: auto; }
 
-.zz {
+.ti {
   position: fixed;
   width: 100%;
   height: 100%;
@@ -74,7 +74,7 @@ body {
   .header .title {
     width: 100%;
     height: 100%; }
-    .header .title .jt {
+    .header .title .fan {
       width: 0.7rem;
       height: 0.7rem;
       color: #fff;
@@ -156,7 +156,7 @@ body {
   padding-right: 0.35rem;
   box-sizing: border-box;
   display: none; }
-  .lyric #quiet {
+  .lyric #mute {
     font-family: "iconfont";
     font-size: 0.36rem;
     position: absolute;
@@ -236,17 +236,6 @@ body {
   position: fixed;
   bottom: 0;
   z-index: 2; }
-  .footer .top {
-    float: left;
-    width: 100%;
-    height: 1.4rem; }
-    .footer .top a {
-      font-family: "iconfont";
-      color: #fff;
-      font-size: 0.48rem;
-      float: left;
-      margin-left: 1rem;
-      margin-top: 0.5rem; }
   .footer .bot {
     width: 100%;
     height: 2.3rem;
@@ -277,13 +266,13 @@ body {
         background: #7b7668;
         margin-top: 0.33rem;
         border-radius: 1px; }
-      .footer .bot .time .process1 {
+      .footer .bot .time .tiao1 {
         position: relative;
         width: 100%;
         height: 100%;
         border-radius: 1px;
         background: #7b7668; }
-      .footer .bot .time .process2 {
+      .footer .bot .time .tiao2 {
         position: absolute;
         left: 0;
         top: 0;
@@ -323,10 +312,24 @@ body {
         left: 0;
         font-size: 0.48rem;
         line-height: 1.6rem; }
-      .footer .bot .info .back {
-        left: 1.1rem; }
-      .footer .bot .info .forword {
-        right: 1.1rem; }
+      .footer .bot .info .prev {
+        width: 0.8rem;
+        height: 0.8rem;
+        left: 1.3rem;
+        background: url(../image/prev.png);
+        background-size: contain;
+        position: absolute;
+        bottom: 0.5rem;
+        line-height: 1.6rem; }
+      .footer .bot .info .next {
+        width: 0.8rem;
+        height: 0.8rem;
+        right: 1.3rem;
+        background: url(../image/next.png);
+        background-size: contain;
+        position: absolute;
+        bottom: 0.5rem;
+        line-height: 1.6rem; }
       .footer .bot .info .list {
         width: 0.6rem;
         height: 0.6rem;
@@ -337,7 +340,7 @@ body {
         bottom: 0.5rem;
         line-height: 1.6rem; }
 
-.playlist {
+.lists {
   position: fixed;
   bottom: 0;
   z-index: 10;
@@ -345,50 +348,54 @@ body {
   width: 100%;
   height: auto;
   display: none; }
-  .playlist .plays {
+  .lists .plays {
     width: 100%;
     height: 1.1rem;
     line-height: 1.1rem;
     box-sizing: border-box;
     text-align: center; }
-    .playlist .plays span:nth-of-type(1) {
+    .lists .plays span:nth-of-type(1) {
       font-size: 0.36rem;
       color: #fff; }
-      .playlist .plays span:nth-of-type(1) i {
+      .lists .plays span:nth-of-type(1) i {
         font-style: normal; }
-    .playlist .plays span:nth-of-type(2) {
+    .lists .plays span:nth-of-type(2) {
       display: inline-block;
       float: right;
       color: #fff;
       font-size: 0.32rem;
-      margin-right: 0.4rem; }
-  .playlist ul {
+      margin-top: 0.3rem;
+      margin-right: 0.4rem;
+      width: 0.4rem;
+      height: 0.4rem;
+      background: url(../image/all.png);
+      background-size: contain; }
+  .lists ul {
     width: 100%;
     height: auto;
     overflow: hidden;
     padding-left: 0.35rem;
     box-sizing: border-box; }
-    .playlist ul li {
+    .lists ul li {
       width: 100%;
       height: 0.94rem;
-      border-bottom: 1px solid #ededed;
       color: #7c7c7c;
       line-height: 0.94rem; }
-      .playlist ul li a {
+      .lists ul li a {
         color: #FF3838;
         display: none;
         margin-right: 0.2rem; }
-      .playlist ul li span:nth-of-type(1) {
+      .lists ul li span:nth-of-type(1) {
         font-size: 0.3rem;
         color: #fff; }
-      .playlist ul li span:nth-of-type(2) {
+      .lists ul li span:nth-of-type(2) {
         font-size: 0.24rem; }
-      .playlist ul li span:nth-of-type(3) {
+      .lists ul li span:nth-of-type(3) {
         font-size: 0.24rem; }
-      .playlist ul li span:nth-of-type(4) {
+      .lists ul li span:nth-of-type(4) {
         font-size: 0.24rem;
         float: right;
         font-family: "iconfont";
         margin-right: 0.4rem; }
-    .playlist ul li.active span {
+    .lists ul li.active span {
       color: #FF3838; }
