--- a/css/index.scss
+++ b/css/index.scss
@@ -61,7 +61,7 @@ body{
     z-index: 1;
    width: auto;
 }
-.zz{
+.ti{
     position: fixed;
     width:100%;
     height: 100%;
@@ -92,7 +92,7 @@ body{
         width: 100%;
         height: 100%;
        
-        .jt{
+        .fan{
             width: 0.7rem;
             height: 0.7rem;
             color: #fff;
@@ -186,7 +186,7 @@ body{
     padding-right: 0.35rem;
     box-sizing: border-box;
     display: none;
-    #quiet{
+    #mute{
         font-family: "iconfont";
         font-size: 0.36rem;
         position: absolute;
@@ -271,19 +271,6 @@ body{
     position: fixed;
     bottom:0;
     z-index: 2;
-    .top{
-        float: left;
-        width: 100%;
-        height: 1.4rem; 
-        a{
-            font-family: "iconfont";
-            color:#fff;
-            font-size: 0.48rem;
-            float: left;
-            margin-left: 1rem;
-            margin-top: 0.5rem;
-        }
-    }
     .bot{
         width: 100%;
         height: 2.3rem;
@@ -314,14 +301,14 @@ body{
                 margin-top:0.33rem;
                 border-radius:1px;
             }
-            .process1{
+            .tiao1{
                 position: relative;
                 width: 100%;
                 height: 100%;
                 border-radius:1px;
                 background:#7b7668;
             }
-            .process2{
+            .tiao2{
                 position: absolute;
                 left: 0;
                 top:0;
@@ -368,20 +355,34 @@ body{
                 font-size: 0.48rem;
                 line-height: 1.6rem;
             }
-            .back{
-                left: 1.1rem;
+            .prev{
+                width: 0.8rem;
+                height: 0.8rem;
+                left: 1.3rem;
+                background: url(../image/prev.png); 
+                background-size: contain;
+                position: absolute;
+                bottom: 0.5rem;
+                line-height: 1.6rem;
             }
-            .forword{
-                right: 1.1rem;
+            .next{
+                width: 0.8rem;
+                height: 0.8rem;
+                right: 1.3rem;
+                background: url(../image/next.png); 
+                background-size: contain;
+                position: absolute;
+                bottom: 0.5rem;
+                line-height: 1.6rem;
             }
             .list{
                 width: 0.6rem;
-    height: 0.6rem;
+                height: 0.6rem;
                 background: url(../image/list.png); 
-       background-size: contain;
+                background-size: contain;
                 right: 0;
                 position: absolute;
-    bottom: 0.5rem;
+                bottom: 0.5rem;
                 line-height: 1.6rem;
             }
         }
@@ -389,7 +390,7 @@ body{
 }
 
 //播放页面
-.playlist{
+.lists{
     position: fixed;
     bottom: 0;
     z-index: 10;
@@ -416,7 +417,13 @@ body{
              float: right;
              color:#fff;
              font-size:0.32rem;
+             margin-top: 0.3rem;
              margin-right: 0.4rem;
+             width: 0.4rem;
+             height: 0.4rem;
+                background: url(../image/all.png); 
+                background-size: contain;
+              
          }
     }
     ul{
@@ -428,7 +435,7 @@ body{
         li{
             width: 100%;
             height: 0.94rem;
-            border-bottom: 1px solid #ededed;
+            
             color:#7c7c7c;
             line-height: 0.94rem;
             a{
@@ -459,6 +466,7 @@ body{
         li.active{
             span{
                 color:#FF3838;
+
             }
             
         }
